--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -21,8 +21,8 @@
 </div>
 
 <div class="field">
-    <%= f.label :profile %><br />
-    <%= f.text_area :profile %>
+    <%= f.label :message %><br />
+    <%= f.text_area :message %>
 </div>
 
 <div class="field">
