--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,6 +14,6 @@
 
 <p><%= @user.userid %></p>
 
-<% if @user.profile.present? %>
+<% if @user.message.present? %>
 <p><%=safe_join(@user.profile.split("\n"),tag(:br))%></p>
 <% end %>
