テーブル調整

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,6 +14,6 @@
 
 <p><%= @user.userid %></p>
 
-<% if @user.message.present? %>
-<p><%=safe_join(@user.profile.split("\n"),tag(:br))%></p>
-<% end %>
+<%# if @user.message.present? %>
+<%=#safe_join(@user.profile.split("\n"),tag(:br))%>
+<%# end %>
