--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -61,26 +61,58 @@
     <%= f.text_area :fvsong %>
 </div>
 
-<script>
-    function func_id() {
-        var i = document.getElementById("ytid");
-        var t = i.value;
-        if (/watch\?v=/.test(t)) {
-            var index = t.indexOf('watch?v=');
-            i.value = t.slice(index + 8);
-        } else if (/youtu\.be\//.test(t)) {
-            var index = t.indexOf('youtu.be/');
-            i.value = t.slice(index + 9);
-        } else {
-            i.value = '正しいURLを入力してください';
-        }
-    }
-</script>
+
 
 <div class="field">
     <%= f.label :fvmv, "好きなMV" %><br />
     <%= f.text_field :fvmv, placeholder: "YouTubeのURLをペースト", oninput: "func_id()", id: "ytid" %>
+    <p id="yt_error"></p>
 </div>
+
+<% if @profile.fvmv.present? %>
+<div id="ytid_confirm_now">
+    <iframe width="854" height="480" src="https://www.youtube.com/embed/<%= @profile.fvmv %>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<% end %>
+
+<div id="ytid_confirm"></div>
+
+<script>
+    function func_id() {
+        var i = document.getElementById("ytid");
+        var t = i.value;
+
+        $('#ytid_confirm, #ytid_confirm_now, #yt_error').fadeOut();
+
+        if (/watch\?v=/.test(t)) {
+            var index = t.indexOf('watch?v=');
+            var y = t.slice(index + 8);
+
+            i.value = y
+
+            var ytid_confirm = '<iframe width="854" height="480" src="https://www.youtube.com/embed/' + y + '" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>';
+            document.getElementById('ytid_confirm').innerHTML = ytid_confirm;
+            $('#ytid_confirm').fadeIn();
+
+        } else if (/youtu\.be\//.test(t)) {
+            var index = t.indexOf('youtu.be/');
+            var y = t.slice(index + 9);
+
+            i.value = y
+
+            var ytid_confirm = '<iframe width="854" height="480" src="https://www.youtube.com/embed/' + y + '" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>';
+            document.getElementById('ytid_confirm').innerHTML = ytid_confirm;
+            $('#ytid_confirm').fadeIn();
+
+        } else {
+            i.value = '';
+            document.getElementById('yt_error').innerHTML = "正しいURLを入力してください"
+            $('#yt_error').fadeIn();
+        }
+    }
+</script>
+
+
 
 <div class="field">
     <%= f.label :myband, "活動中のマイバンド" %><br />
