AWS S3アップロード

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -378,6 +378,10 @@
 
                         &.ac_link_copy i {
                             font-size: 1.15rem;
+
+                            @include sp {
+                                font-size: 1.35rem;
+                            }
                         }
 
                         i {
