--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,7 +59,8 @@
 
     <script>
         echo.init({
-            offset: 200
+            offset: 600,
+            throttle: 100
         });
     </script>
 </body>
