--- a/app/views/home/_reco_users.html.erb
+++ b/app/views/home/_reco_users.html.erb
@@ -30,6 +30,7 @@
     <% end %>
 
     <% if @reco_users.length < 5 %>
+    <% 5.times do %>
     <div class="reco_item_container">
         <div class="reco_item_wrap">
             <div class="reco_item_img"><%= image_tag "fallback/default_userimg" %></div>
@@ -38,30 +39,7 @@
             <div class="follow_wrap clearfix"><span class="follow_btn follow"></span></div>
         </div>
     </div>
-    <div class="reco_item_container">
-        <div class="reco_item_wrap">
-            <div class="reco_item_img"><%= image_tag "fallback/default_userimg" %></div>
-            <p class="reco_item_name">Sample user</p>
-            <p class="reco_item_id">sample_user</p>
-            <div class="follow_wrap clearfix"><span class="follow_btn follow"></span></div>
-        </div>
-    </div>
-    <div class="reco_item_container">
-        <div class="reco_item_wrap">
-            <div class="reco_item_img"><%= image_tag "fallback/default_userimg" %></div>
-            <p class="reco_item_name">Sample user</p>
-            <p class="reco_item_id">sample_user</p>
-            <div class="follow_wrap clearfix"><span class="follow_btn follow"></span></div>
-        </div>
-    </div>
-    <div class="reco_item_container">
-        <div class="reco_item_wrap">
-            <div class="reco_item_img"><%= image_tag "fallback/default_userimg" %></div>
-            <p class="reco_item_name">Sample user</p>
-            <p class="reco_item_id">sample_user</p>
-            <div class="follow_wrap clearfix"><span class="follow_btn follow"></span></div>
-        </div>
-    </div>
+    <% end %>
     <% end %>
 
     <% else %>
