--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -229,14 +229,19 @@ section.tab_content_wrap {
 
                                     p.notice_txt {
                                         line-height: 1.5em;
+                                        height: 1.5em;
                                         font-size: 0.92rem;
+                                        overflow: hidden;
+                                        text-overflow: ellipsis;
+                                        white-space: nowrap;
                                     }
 
-                                    span.date {
+                                    p.notice_txt_date {
                                         font-size: 0.77rem;
                                         display: block;
                                         margin-top: 0.3em;
                                         color: $sub-color;
+                                        line-height: 120%;
                                     }
                                 }
                             }
