--- a/app/views/helps/contact.html.erb
+++ b/app/views/helps/contact.html.erb
@@ -1,9 +1,12 @@
+<% set_meta_tags title: "お問い合わせ" %>
+
 <div class="form_head">
     <h2>お問い合わせ</h2>
 </div>
 
 <div class="text_box_in">
     <p>
-        <a href="mailto:otofile.info@gmail.com?subject=お問い合わせ&body=【氏名】%0D%0A【お問い合わせ内容】"><i class="far fa-envelope"></i> メールでお問い合わせ</a>
+        <a href="mailto:otofile.info@gmail.com?subject=お問い合わせ&body=【氏名】%0D%0A【お問い合わせ内容】"><i class="far fa-envelope"></i>
+            メールでお問い合わせ</a>
     </p>
 </div>
