--- a/app/views/helps/howto.erb
+++ b/app/views/helps/howto.erb
@@ -1,3 +1,5 @@
+<% set_meta_tags title: "機能説明" %>
+
 <div class="form_head">
     <h2>機能説明</h2>
 </div>
@@ -5,11 +7,11 @@
 <div class="text_box_in">
     <h3>メイン機能</h3>
     <p>これらの機能は、アカウントを作成することで利用できます。<br>
-    アカウント作成は<%= link_to 'こちら', new_registration_path(resource_name) %></p>
+        アカウント作成は<%= link_to 'こちら', new_registration_path(resource_name) %></p>
 
     <h3>プロフィール</h3>
     <p>ハマっているアーティストや曲、ライブの予定などを書き込めます。<br>
-    「今（Now）」だけでなく今までに聞いてきた曲や過去の音楽イベントなどの「過去（History）」も書き込めば、より魅力的なプロフィールになります。プロフィールを充実をさせて、趣味の合う仲間を見つけましょう。</p>
+        「今（Now）」だけでなく今までに聞いてきた曲や過去の音楽イベントなどの「過去（History）」も書き込めば、より魅力的なプロフィールになります。プロフィールを充実をさせて、趣味の合う仲間を見つけましょう。</p>
 
     <h3>プロフィール充実度</h3>
     <p>プロフィールが埋まっているほど％が増えます。充実させるほど、ユーザーの目に触れる機会が増えていきます。</p>
