--- a/app/views/helps/privacy.html.erb
+++ b/app/views/helps/privacy.html.erb
@@ -1,3 +1,5 @@
+<% set_meta_tags title: "プライバシーポリシー" %>
+
 <div class="form_head">
     <h2>プライバシーポリシー</h2>
 </div>
@@ -7,7 +9,8 @@
 
         Otofileを利用する際には、たとえ投稿を見ているだけであっても、使用している端末の種類やIPアドレスといったユーザーの一部の個人情報がOtofileに送信されます。ユーザーは、自身のメールアドレス、電話番号、アドレス帳の連絡先、および公開プロフィールなどのさらなる情報をOtofileと共有することができます。Otofileはこれらの情報を、ユーザーのアカウントを安全に保護するため、ユーザーにより関連のある投稿、フォローすべき人、イベント、および広告を表示するため等の目的に使用します。<br><br>
 
-        ユーザーは、アカウントの設定からOtofileが収集するデータとその使用方法を制限したり、アカウントのセキュリティ、マーケティング設定、ユーザーのアカウントにアクセス可能なアプリ、そしてユーザーがOtofileにアップロードしたアドレス帳の連絡先を管理したりすることができます。ユーザーは、Otofile上で自身が共有した情報を ダウンロード することもできます。<br><br>
+        ユーザーは、アカウントの設定からOtofileが収集するデータとその使用方法を制限したり、アカウントのセキュリティ、マーケティング設定、ユーザーのアカウントにアクセス可能なアプリ、そしてユーザーがOtofileにアップロードしたアドレス帳の連絡先を管理したりすることができます。ユーザーは、Otofile上で自身が共有した情報を
+        ダウンロード することもできます。<br><br>
 
         ユーザーがOtofileと共有した情報に加えて、Otofileは、ユーザーのツイート、ユーザーが閲覧したコンテンツ、「いいね」をしたコンテンツ、また、ユーザーが興味・関心のある話題、を使用して、ユーザーにより関連のあるコンテンツを表示します。透明性を高めるために、ユーザーはOtofileがどのような情報を保有しているかを知ることができ、またいつでもそれらの情報を変更または訂正することができます。<br><br>
 
