--- a/app/views/search/post.html.erb
+++ b/app/views/search/post.html.erb
@@ -1,9 +1,11 @@
+<% set_meta_tags title: "検索結果：#{@w}" %>
+
 <section class="search">
 
     <div class="panel f_l_user_list posts_l">
 
         <div class="pl_head">
-            <p class="ttl"><%= @w %></p>
+            <h1 class="ttl"><%= @w %></h1>
             <p class="sttl">ヒット <%= @search.length %> 件</p>
         </div>
 
