--- a/app/views/search/unmatch.html.erb
+++ b/app/views/search/unmatch.html.erb
@@ -1,9 +1,11 @@
+<% set_meta_tags title: "「#{@w}」は見つかりません" %>
+
 <section class="search">
 
     <div class="panel f_l_user_list">
 
         <div class="pl_head">
-            <p class="ttl">" <%= @w %> " は見つかりません</p>
+            <h1 class="ttl">" <%= @w %> " は見つかりません</h1>
             <p class="sttl">ヒット 0 件</p>
         </div>
 
