--- a/app/views/helps/cookie.html.erb
+++ b/app/views/helps/cookie.html.erb
@@ -1,3 +1,5 @@
+<% set_meta_tags title: "Cookieの使用について" %>
+
 <div class="form_head">
     <h2>Cookieの使用について</h2>
 </div>
@@ -8,7 +10,8 @@
         以下では、CookieとCookieの類似技術をOtofileがどのように使用しているか、利用者のプライバシー設定、利用者が選べるその他のオプションについて説明します。</p>
 
     <h3>Cookieとは</h3>
-    <p>Cookieとは、ウェブサイトを閲覧している利用者のパソコンにそのウェブサイトが保存する小さなファイルです。Otofileのサービスは多くのウェブサイトと同様に、サービスの利用状況を把握し、サービス機能の向上に役立てる目的でCookieを使用しています。</p>
+    <p>Cookieとは、ウェブサイトを閲覧している利用者のパソコンにそのウェブサイトが保存する小さなファイルです。Otofileのサービスは多くのウェブサイトと同様に、サービスの利用状況を把握し、サービス機能の向上に役立てる目的でCookieを使用しています。
+    </p>
 
     <h3>プライバシーについての利用者のオプション</h3>
     <p>Otofileは、利用者に効果的なプライバシー設定を提供できるよう取り組んでいます。利用者は、OtofileによるCookieの使用方法をさまざまな方法で制御、制限できます。</p>
