--- a/app/views/helps/terms.html.erb
+++ b/app/views/helps/terms.html.erb
@@ -1,16 +1,21 @@
+<% set_meta_tags title: "利用規約" %>
+
 <div class="form_head">
     <h2>利用規約</h2>
 </div>
 
 <div class="text_box_in clearfix">
     <h3>Otofileサービス利用規約</h3>
-    <p>本サービス利用規約（以下、「本規約」と称します）は、本サービスにアップロード、ダウンロードまたは表示される情報、テキスト、リンク、グラフィック、写真、音声、動画、その他のマテリアルやアレンジされたマテリアル（以下、「コンテンツ」と総称します）にアクセスし、利用する場合に適用されます。本サービスを利用することによって、ユーザーは本規約に拘束されることに同意したことになります。</p>
+    <p>本サービス利用規約（以下、「本規約」と称します）は、本サービスにアップロード、ダウンロードまたは表示される情報、テキスト、リンク、グラフィック、写真、音声、動画、その他のマテリアルやアレンジされたマテリアル（以下、「コンテンツ」と総称します）にアクセスし、利用する場合に適用されます。本サービスを利用することによって、ユーザーは本規約に拘束されることに同意したことになります。
+    </p>
 
     <h3>1.本サービスを利用できる人</h3>
-    <p>本サービスを利用できるのは、Otofileと拘束力のある契約を締結することに同意し、適用のある法域の法律によりサービスを受けることが禁止されていない者に限ります。ユーザーが、特定の企業、組織、政府、その他の法人のために本規約を受け入れ、本サービスを利用する場合、そのような権限を有していることおよび当該法人を本規約に法的に拘束することができる権限を有していることを表明し保証するものとします。その場合、本規約における「ユーザー」は当該法人を指すものとします。</p>
+    <p>本サービスを利用できるのは、Otofileと拘束力のある契約を締結することに同意し、適用のある法域の法律によりサービスを受けることが禁止されていない者に限ります。ユーザーが、特定の企業、組織、政府、その他の法人のために本規約を受け入れ、本サービスを利用する場合、そのような権限を有していることおよび当該法人を本規約に法的に拘束することができる権限を有していることを表明し保証するものとします。その場合、本規約における「ユーザー」は当該法人を指すものとします。
+    </p>
 
     <h3>2.プライバシー</h3>
-    <p>本サービスの<%= link_to 'プライバシーポリシー', '/h/privacy' %>は、Otofileサービスをご使用いただく際に本サービスに提供された情報が、本サービスでどのように取り扱われるかについて説明しています。ユーザーは、本サービスを利用することによって、Otofileがこれら情報を収集、保管、処理、使用（プライバシーポリシーの定めに従って）に同意することを理解しているものとします。</p>
+    <p>本サービスの<%= link_to 'プライバシーポリシー', '/h/privacy' %>は、Otofileサービスをご使用いただく際に本サービスに提供された情報が、本サービスでどのように取り扱われるかについて説明しています。ユーザーは、本サービスを利用することによって、Otofileがこれら情報を収集、保管、処理、使用（プライバシーポリシーの定めに従って）に同意することを理解しているものとします。
+    </p>
 
     <h3>3.本サービス上のコンテンツ</h3>
     <p>ユーザーは、適用される法令や規則への遵守を含め、本サービスの利用および自身が提供するコンテンツに対して責任を負います。提供されるコンテンツは、他の人たちと共有して差し支えのないものに限定してください。<br><br>
@@ -20,25 +25,33 @@
     <h3>ユーザーの権利およびコンテンツに対する権利の許諾</h3>
     <p>ユーザーは、本サービス上にまたは本サービスを介して自ら送信、投稿または表示するあらゆるコンテンツに対する権利を留保するものとします。ユーザーのコンテンツはユーザーのものです。すなわち、ユーザーのコンテンツ（他のコンテンツに組み込まれたユーザーの音声、写真および動画もユーザーのコンテンツの一部と考えられます）の所有権はユーザーにあります。<br><br>
         ユーザーは、本サービス上にまたは本サービスを介してコンテンツを送信、投稿または表示することによって、本サービスが、既知のものか今後開発されるものかを問わず、あらゆる媒体または配信方法を使ってかかるコンテンツを使用、コピー、複製、処理、改変、修正、公表、送信、表示および配信するための、世界的かつ非独占的ライセンス（サブライセンスを許諾する権利と共に）を本サービスに対し無償で許諾することになります（明確化のために、これらの権利は、たとえば、キュレーション、変形、翻訳を含むものとします）。このライセンスによって、ユーザーは、他の利用者に対し、ご自身の投稿を世界中で閲覧可能とすることを承認することになります。ユーザーは、このライセンスには、Otofileが、コンテンツ利用に関する本サービスの条件に従うことを前提に、本サービスを提供、宣伝および向上させるための権利ならびに本サービスに対しまたは本サービスを介して送信されたコンテンツを他の媒体やサービスで配給、放送、配信、プロモーションまたは公表することを目的として、その他の企業、組織または個人に提供する権利が含まれていることに同意するものとします。ユーザーが本サービスを介して送信、投稿、送信またはそれ以外で閲覧可能としたコンテンツに関して、Otofile、またはその他の企業、組織もしくは個人は、ユーザーに報酬を支払うことなく（ユーザーは、ユーザーによる本サービスの利用がコンテンツおよびコンテンツに関する権利の許諾に対する十分な対価であることに同意するものとします）、当該コンテンツを上記のように追加的に使用します。<br><br>
-        ユーザーは、ご自身が本サービス上でまたは本サービスを通じて送信、投稿または表示するコンテンツに関して、本規約で付与される権利を許諾するために必要な、すべての権利、ライセンス、同意、許可、権能および権限を有していることまたは得ていることを表明し保証するものとします。ユーザーは、ご自身が必要な許可を得ているまたはその他の理由により素材を投稿しOtofileに上記のライセンスを許諾することができる法的権限を有している場合を除き、当該コンテンツが著作権その他の財産権の対象となる素材を含むものではないことに同意するものとします。</p>
+        ユーザーは、ご自身が本サービス上でまたは本サービスを通じて送信、投稿または表示するコンテンツに関して、本規約で付与される権利を許諾するために必要な、すべての権利、ライセンス、同意、許可、権能および権限を有していることまたは得ていることを表明し保証するものとします。ユーザーは、ご自身が必要な許可を得ているまたはその他の理由により素材を投稿しOtofileに上記のライセンスを許諾することができる法的権限を有している場合を除き、当該コンテンツが著作権その他の財産権の対象となる素材を含むものではないことに同意するものとします。
+    </p>
 
     <h3>4.本サービスの利用</h3>
     <p>本ユーザー契約の一部であり、本サービスでの禁止事項の内容を記載するOtofileルールとポリシーをご覧ください。ユーザーは、本規約およびすべての適用法、規約および規則を遵守する場合にのみ本サービスを利用することができます。<br><br>
         Otofileサービスは常に進化し続けています。そのため、本サービスは、独自の判断により適宜変更されることがあります。本サービスまたは本サービス内の機能をユーザーまたは利用者全般に提供することを（永久的または一時的に）中止することがあります。いつでも、独自判断により、使用と保存に制限を設ける権利を留保します。また、ユーザーに責任を負うことなく、本サービス上のコンテンツの削除または配信の拒否、本サービス上のコンテンツの配信または表示の制限、利用者の資格停止または終了、および利用者名の返還を要求することができるものとします。<br><br>
-        ユーザーは、Otofileより本サービスへのアクセスとその利用について許諾を得ることの対価として、Otofileならびにその第三者プロバイダーおよびパートナーが、本サービス上に広告を掲載すること、またはコンテンツもしくは本サービスから得られる情報 (その提供者がユーザーであるか他者であるかを問わず) の表示に関連した広告を掲載することに同意するものとします。ユーザーはまた、たとえばOtofileサービスの妨害や本サービスが提供するインターフェースおよび手順以外の方法を使ったOtofileサービスへのアクセスにより、Otofileサービスの不正利用をしないことにも同意するものとします。ユーザーは、本サービスへのアクセスまたはその使用中に、次のいずれも行ってはなりません。(i)本サービス、Otofileのコンピュータシステム、またはOtofileプロバイダーのテクニカルデリバリーシステムの非公開部分へのアクセス、不正な改ざんもしくは使用、(ii)システムもしくはネットワークの脆弱性の探索、スキャンもしくはテスト、またはセキュリティもしくは認証方法の侵害もしくは回避、(iii)Otofileから提供される（かつ該当する利用条件に従う場合にのみ提供される）、現在利用可能な公開インターフェース以外の方法（自動プログラムか否かを問わない）で、本サービスへのアクセスもしくはその探索またはアクセスもしくは探索の試み（ただし、Otofileとの個別契約で特に許可されている場合は除く）（注：本サービスへのクローリングは、robots.txtファイルの定めによる場合は認められていますが、Otofileによる事前の同意がないまま本サービスのスクレイピングをすることは明示的に禁止されています）、(iv)電子メールもしくは投稿でのTCP/IPパケットヘッダーまたはヘッダー情報の一部の偽造、または方法の如何を問わず、改ざんされた情報、詐欺的情報もしくは情報源を偽装した情報を送る目的での本サービスの利用、または(v)いずれかの利用者、ホストもしくはネットワークのアクセスの妨害、または遮断（もしくはその試み）（本サービスへのウィルスの送信、オーバーロード、フラッディング、スパミング、メールの大量送信、あるいは本サービスを妨害したり過度な負荷を与える方法でコンテンツの作成をスクリプトすることを含みますが、これらに限定されません）。本サービスはさらに、(i)適用されるすべての法令、規則、法的手続や政府の要請へ対応し、(ii)本規約を実施し(規約違反の疑いがある場合の調査を含みます)、(iii)不正利用、セキュリティもしくは技術的な問題を検知、防止もしくはその対処をし、(iv)利用者からのサポート要請に対応し、または (v)Otofileやその利用者および社会全体の権利、財産もしくは安全を保護するために、本サービスが必要であると合理的に判断する一切の情報について、アクセス、閲覧、保存、および公開する権利を留保します。Otofileは、<%= link_to 'プライバシーポリシー', '/h/privacy' %>の定めによる場合を除き、個人識別情報を第三者に開示することはありません。<br><br>
+        ユーザーは、Otofileより本サービスへのアクセスとその利用について許諾を得ることの対価として、Otofileならびにその第三者プロバイダーおよびパートナーが、本サービス上に広告を掲載すること、またはコンテンツもしくは本サービスから得られる情報
+        (その提供者がユーザーであるか他者であるかを問わず)
+        の表示に関連した広告を掲載することに同意するものとします。ユーザーはまた、たとえばOtofileサービスの妨害や本サービスが提供するインターフェースおよび手順以外の方法を使ったOtofileサービスへのアクセスにより、Otofileサービスの不正利用をしないことにも同意するものとします。ユーザーは、本サービスへのアクセスまたはその使用中に、次のいずれも行ってはなりません。(i)本サービス、Otofileのコンピュータシステム、またはOtofileプロバイダーのテクニカルデリバリーシステムの非公開部分へのアクセス、不正な改ざんもしくは使用、(ii)システムもしくはネットワークの脆弱性の探索、スキャンもしくはテスト、またはセキュリティもしくは認証方法の侵害もしくは回避、(iii)Otofileから提供される（かつ該当する利用条件に従う場合にのみ提供される）、現在利用可能な公開インターフェース以外の方法（自動プログラムか否かを問わない）で、本サービスへのアクセスもしくはその探索またはアクセスもしくは探索の試み（ただし、Otofileとの個別契約で特に許可されている場合は除く）（注：本サービスへのクローリングは、robots.txtファイルの定めによる場合は認められていますが、Otofileによる事前の同意がないまま本サービスのスクレイピングをすることは明示的に禁止されています）、(iv)電子メールもしくは投稿でのTCP/IPパケットヘッダーまたはヘッダー情報の一部の偽造、または方法の如何を問わず、改ざんされた情報、詐欺的情報もしくは情報源を偽装した情報を送る目的での本サービスの利用、または(v)いずれかの利用者、ホストもしくはネットワークのアクセスの妨害、または遮断（もしくはその試み）（本サービスへのウィルスの送信、オーバーロード、フラッディング、スパミング、メールの大量送信、あるいは本サービスを妨害したり過度な負荷を与える方法でコンテンツの作成をスクリプトすることを含みますが、これらに限定されません）。本サービスはさらに、(i)適用されるすべての法令、規則、法的手続や政府の要請へ対応し、(ii)本規約を実施し(規約違反の疑いがある場合の調査を含みます)、(iii)不正利用、セキュリティもしくは技術的な問題を検知、防止もしくはその対処をし、(iv)利用者からのサポート要請に対応し、または
+        (v)Otofileやその利用者および社会全体の権利、財産もしくは安全を保護するために、本サービスが必要であると合理的に判断する一切の情報について、アクセス、閲覧、保存、および公開する権利を留保します。Otofileは、<%= link_to 'プライバシーポリシー', '/h/privacy' %>の定めによる場合を除き、個人識別情報を第三者に開示することはありません。<br><br>
 
-    <h3>ユーザーアカウント</h3>
-    <p>ユーザーは、Otofileサービスのいくつかを利用するために、アカウントを作成する必要があります。ユーザーは自身のアカウントの安全を守る責任があります。したがって、強力なパスワードを使用し、その使用は本アカウントに限定するようにしてください。ユーザーによる上記の不遵守に起因する一切の損失または損害に対して本サービスは責任を負うことはできず、また今後も責任を負うものではありません。<br><br>
-        ユーザーは、本サービスからのほとんどの通信をコントロールすることができます。サービスに係わる案内や管理上のメッセージなど、ユーザーに一定の通知を行う必要がある場合があります。これらの通知は本サービスおよびユーザーアカウントの一部とみなされ、ユーザーは、これらの連絡の受信を拒否することができない場合があります。ユーザーがアカウントにご自身の電話番号を追加し、その後当該電話番号を変更または削除した場合、ユーザーは、本サービスがユーザーの旧電話番号を取得した者と連絡を取ることがないようにするため、ご自身でアカウント情報を更新する必要があります。</p>
+        <h3>ユーザーアカウント</h3>
+        <p>ユーザーは、Otofileサービスのいくつかを利用するために、アカウントを作成する必要があります。ユーザーは自身のアカウントの安全を守る責任があります。したがって、強力なパスワードを使用し、その使用は本アカウントに限定するようにしてください。ユーザーによる上記の不遵守に起因する一切の損失または損害に対して本サービスは責任を負うことはできず、また今後も責任を負うものではありません。<br><br>
+            ユーザーは、本サービスからのほとんどの通信をコントロールすることができます。サービスに係わる案内や管理上のメッセージなど、ユーザーに一定の通知を行う必要がある場合があります。これらの通知は本サービスおよびユーザーアカウントの一部とみなされ、ユーザーは、これらの連絡の受信を拒否することができない場合があります。ユーザーがアカウントにご自身の電話番号を追加し、その後当該電話番号を変更または削除した場合、ユーザーは、本サービスがユーザーの旧電話番号を取得した者と連絡を取ることがないようにするため、ご自身でアカウント情報を更新する必要があります。
+        </p>
 
-    <h3>本サービスを利用するためのユーザーライセンス</h3>
-    <p>Otofileはユーザーに、本サービスの一環として本サービスが提供するソフトウェアを使用するための、個人的で世界的、譲渡不能の非独占的なライセンスを無償で許諾します。このライセンスの唯一の目的は、ユーザーがOtofileの提供する本サービスを本規約に従った形で利用し、その恩恵を受けられるようにすることにあります。<br><br>
-        ユーザーがOtofileまたは本サービスについて提供するフィードバック、意見または提案は、すべて完全に自発的なものであり、本サービスはこのようなフィードバック、意見または提案を、ユーザーに対して何ら義務を負うことなく本サービスが適切であると判断する方法で、自由に利用できるものとします。</p>
+        <h3>本サービスを利用するためのユーザーライセンス</h3>
+        <p>Otofileはユーザーに、本サービスの一環として本サービスが提供するソフトウェアを使用するための、個人的で世界的、譲渡不能の非独占的なライセンスを無償で許諾します。このライセンスの唯一の目的は、ユーザーがOtofileの提供する本サービスを本規約に従った形で利用し、その恩恵を受けられるようにすることにあります。<br><br>
+            ユーザーがOtofileまたは本サービスについて提供するフィードバック、意見または提案は、すべて完全に自発的なものであり、本サービスはこのようなフィードバック、意見または提案を、ユーザーに対して何ら義務を負うことなく本サービスが適切であると判断する方法で、自由に利用できるものとします。
+        </p>
 
-    <h3>本規約の終了</h3>
-    <p>ユーザーは、いつでもアカウントを削除し本サービスの利用を中止することにより、Otofileとの法的契約を終了することができます。ユーザー情報についての詳細は、<%= link_to 'プライバシーポリシー', '/h/privacy' %>をご覧ください。<br><br>
-        本サービスは、(i)ユーザーが本規約またはOtofileルールとポリシーに違反している、(ii)ユーザーが本サービスにリスクまたは法的責任の可能性をもたらす、(iii)不法行為によりユーザーのアカウントの削除が必要となった、(iv)ユーザーの長期的不活動によりアカウントの削除が必要となった、または(v)本サービスによるユーザーへの本サービスの提供が商業的に困難となった（ただし、これらに限定されません）と、本サービスが合理的に確信した場合、理由の如何を問わず、または理由なく、いつでもユーザーのアカウントを一時停止もしくは削除するか、本サービスの全部または一部の提供を終了することができます。かかる状況になった場合、本サービスは、状況に応じ、ユーザーのアカウントに関連するメールアドレスに通知を送るか、あるいはユーザーが次にアカウントにアクセスを試みる際に通知をするための合理的努力を行います。上記のいずれの場合においても、本規約は、ユーザーが本サービスを利用するためのライセンスとともに（ただしこれに限定されません）終了します。ただし、第2、3、5および6条の規定は引き続き適用されます。疑義を避けるために、本規約は、ユーザーアカウントの一時停止または削除後も有効に存続するものとします。</p>
+        <h3>本規約の終了</h3>
+        <p>ユーザーは、いつでもアカウントを削除し本サービスの利用を中止することにより、Otofileとの法的契約を終了することができます。ユーザー情報についての詳細は、<%= link_to 'プライバシーポリシー', '/h/privacy' %>をご覧ください。<br><br>
+            本サービスは、(i)ユーザーが本規約またはOtofileルールとポリシーに違反している、(ii)ユーザーが本サービスにリスクまたは法的責任の可能性をもたらす、(iii)不法行為によりユーザーのアカウントの削除が必要となった、(iv)ユーザーの長期的不活動によりアカウントの削除が必要となった、または(v)本サービスによるユーザーへの本サービスの提供が商業的に困難となった（ただし、これらに限定されません）と、本サービスが合理的に確信した場合、理由の如何を問わず、または理由なく、いつでもユーザーのアカウントを一時停止もしくは削除するか、本サービスの全部または一部の提供を終了することができます。かかる状況になった場合、本サービスは、状況に応じ、ユーザーのアカウントに関連するメールアドレスに通知を送るか、あるいはユーザーが次にアカウントにアクセスを試みる際に通知をするための合理的努力を行います。上記のいずれの場合においても、本規約は、ユーザーが本サービスを利用するためのライセンスとともに（ただしこれに限定されません）終了します。ただし、第2、3、5および6条の規定は引き続き適用されます。疑義を避けるために、本規約は、ユーザーアカウントの一時停止または削除後も有効に存続するものとします。
+        </p>
 
-    <h3>5.一般条件</h3>
-    <p>本規約は、随時改定される場合があります。改定は溯って適用されることはありません。新たな機能に対処する変更または法的な理由により行われる変更を除き、本サービスはユーザーに対し、本規約の当事者の権利義務に影響を及ぼす本規約の変更を行う場合はその発効の30日前に、ユーザーのアカウントに関連するメールアドレス宛にサービス通知またはメール等を通じて通知します。ユーザーは、本規約への改定が有効となって以降に本サービスへのアクセスまたは本サービスの利用を継続することによって、改定後の本規約に拘束されることに同意したものとみなされます。</p>
+        <h3>5.一般条件</h3>
+        <p>本規約は、随時改定される場合があります。改定は溯って適用されることはありません。新たな機能に対処する変更または法的な理由により行われる変更を除き、本サービスはユーザーに対し、本規約の当事者の権利義務に影響を及ぼす本規約の変更を行う場合はその発効の30日前に、ユーザーのアカウントに関連するメールアドレス宛にサービス通知またはメール等を通じて通知します。ユーザーは、本規約への改定が有効となって以降に本サービスへのアクセスまたは本サービスの利用を継続することによって、改定後の本規約に拘束されることに同意したものとみなされます。
+        </p>
 </div>
