--- a/app/views/posts/_activity.html.erb
+++ b/app/views/posts/_activity.html.erb
@@ -17,7 +17,11 @@
             <% end %>
         </p>
 
+        <% if current_page?("/p/#{post.id}") %>
+        <h1 class="ac_ttl"><%= post.title %></h1>
+        <% else %>
         <p class="ac_ttl"><%= post.title %></p>
+        <% end %>
 
         <div class="ac_content_inner">
 
@@ -33,15 +37,20 @@
             <% if post.ytid.present? %>
             <% if current_page?("/p/#{post.id}") %>
             <div class="yt_wrap ac_yt">
-                <iframe width="854" height="480" src="https://www.youtube.com/embed/<%= post.ytid %>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="854" height="480" src="https://www.youtube.com/embed/<%= post.ytid %>" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
             </div>
             <% else %>
             <%= link_to "/p/#{post.id}", class: 'ac_yt' do %>
             <svg height="100%" version="1.1" viewBox="0 0 68 48" width="100%">
-                <path class="ytp-large-play-button-bg" d="M66.52,7.74c-0.78-2.93-2.49-5.41-5.42-6.19C55.79,.13,34,0,34,0S12.21,.13,6.9,1.55 C3.97,2.33,2.27,4.81,1.48,7.74C0.06,13.05,0,24,0,24s0.06,10.95,1.48,16.26c0.78,2.93,2.49,5.41,5.42,6.19 C12.21,47.87,34,48,34,48s21.79-0.13,27.1-1.55c2.93-0.78,4.64-3.26,5.42-6.19C67.94,34.95,68,24,68,24S67.94,13.05,66.52,7.74z" fill="#212121" fill-opacity="0.8"></path>
+                <path class="ytp-large-play-button-bg"
+                    d="M66.52,7.74c-0.78-2.93-2.49-5.41-5.42-6.19C55.79,.13,34,0,34,0S12.21,.13,6.9,1.55 C3.97,2.33,2.27,4.81,1.48,7.74C0.06,13.05,0,24,0,24s0.06,10.95,1.48,16.26c0.78,2.93,2.49,5.41,5.42,6.19 C12.21,47.87,34,48,34,48s21.79-0.13,27.1-1.55c2.93-0.78,4.64-3.26,5.42-6.19C67.94,34.95,68,24,68,24S67.94,13.05,66.52,7.74z"
+                    fill="#212121" fill-opacity="0.8"></path>
                 <path d="M 45,24 27,14 27,34" fill="#fff"></path>
             </svg>
-            <img src="/assets/fallback/post_dummy.jpg" data-echo="https://img.youtube.com/vi/<%= post.ytid %>/hqdefault.jpg" />
+            <img src="/assets/fallback/post_dummy.jpg"
+                data-echo="https://img.youtube.com/vi/<%= post.ytid %>/hqdefault.jpg" />
             <% end %>
             <% end %>
             <% end %>
