--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,13 @@
+<%
+    if current_page?("/p/#{@post.id}")
+        if @post.comment.present?
+            set_meta_tags title: @post.title, description: @post.comment
+        else
+            set_meta_tags title: @post.title
+        end
+    end
+%>
+
 <section class="post">
 
     <div class="panel p_show">
