--- a/app/views/users/nouser.html.erb
+++ b/app/views/users/nouser.html.erb
@@ -1,3 +1,5 @@
+<% set_meta_tags title: "「#{params[:userid]}」お探しのユーザーが見つかりません" %>
+
 <div class="form_head">
     <h2><%= params[:userid] %></h2>
 </div>
